:nail_care: Fixed layout on mobile

--- a/styles/courses.module.css
+++ b/styles/courses.module.css
@@ -7,6 +7,7 @@
 .content {
   display: flex;
   align-items: flex-start;
+  gap: var(--gap-med);
 }
 
 .text {
